# lvc

./: .gitignore  QUICKSTART.md  README Kopie.md  README.md  cli.py  config.yml  gitignore.txt  pyproject.toml  requirements.txt  setup.sh  setup_with_python_check.sh  start.sh  test_components.py  test_microphone.py  test_tts.py
configs/: audio.yml  commands.yml  system.yml
src/: __init__.py
src/actions/: __init__.py
src/audio/: capture.py  wake_word.py
src/config/: __init__.py  loader.py
src/feedback/: __init__.py  tts.py
src/integrations/: __init__.py
src/nlu/: __init__.py  parser.py
src/router/: __init__.py  dispatcher.py
src/stt/: __init__.py  whisper_adapter.py
src/testing/: __init__.py  microphone_test.py
