[tool.poetry]
name = "logic-voice-control"
version = "0.0.1"
description = "Voice control system for Logic Pro with accessibility focus"
authors = ["Petar Nikolic"]
readme = "README.md"
python = "^3.10"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = """
    -ra
    --strict-markers
    --cov=src
    --cov-report=term-missing
    --cov-report=html
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
